--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 </form>
                 <div id="list"></div>
             </div>
+            <div id='game-board'></div>
             
 
         </main>        
@@ -42,7 +43,7 @@
             </section>
             <section id='level-section' class='round-section'>
                 <p>Level 1</p>
-                <button id='next'><h1>Next</h1></button>
+                <button id='player-one'><h1>Player One</h1></button>
             </section>
         </footer>
     </div>
