--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps|Mali|Pangolin&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Fredoka+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Fredericka+the+Great|Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
     <script defer src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/app.js"></script>
@@ -16,8 +14,10 @@
         
     <div class='container'>
         <aside>
+            <img src="./image/local-farmers-market.png" width="280px">
             <section class='logo'>
-                <h1>Fruits Farm</h1>
+                
+                <h1 class="flash-button">Fruits Farm</h1>
             </section>
             <button id="create-player"><span>Player</span></button>
             <button id='score-player'><span>Score</span></button>
@@ -52,6 +52,16 @@
                 </div>
                 <div class='read-me'>
                     <h1>Read me</h1>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <p>- Lorem ipsum dolor sit amet consectetur.</p>
+                    <div>
+                        <img src="./image/local-farmers-market.png" width="280px">
+                    </div>
                 </div>
             </main> 
             <!-- /* -----------------------Footer------------------------------ */ -->
